Day 02 with simple switch